--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Back End Developer</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-                        <p>Development of server-side functionalities for website using PHP and nodejs. Knowledge of various back-end frameworks. Also integrating applications with databases such as MySQL and MongoDB, and cloud support. </p>
+                        <p>Development of server-side functionalities for applications using JAVA and nodejs. Knowledge of various back-end frameworks. Also integrating applications with databases such as MySQL and MongoDB, and cloud support. </p>
                         <hr>
                     </div>
                     <div class="w3-container">
@@ -118,6 +118,12 @@
                 <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Certification</h2>
                     <div class="w3-container">
+                        <h5 class="w3-opacity"><b>University of Michigan | Data Science</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017</h6>
+                        <p>Introduction to Data Science in Python. Verify at <a href="coursera.org/verify/DWWCHRVXQUR7">coursera.org/verify/DWWCHRVXQUR7</a></p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
                         <h5 class="w3-opacity"><b>Oracle Certified Associate</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016</h6>
                         <p>Java Programmer, SE7</p>
@@ -126,7 +132,7 @@
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Cyprus International University | Information Technologies</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2018</h6>
-                        <p>Master Degree</p>
+                        <p>Masters Degree</p>
                         <hr>
                     </div>
                     <div class="w3-container">
